# Deep-Learning-and-Twistoptics-Designing-nanoscale-polariton-propagations-in-twisted-vdW-multilayers

./: .gitignore  README.md  pyproject.toml  requirements-mac.txt  requirements.txt
configs/: config.yaml
data/: epsAu.txt
data/MoOCl2_permittivity/: eps_MoOCl2_xx_imag.txt  eps_MoOCl2_xx_real.txt  eps_MoOCl2_yy_imag.txt  eps_MoOCl2_yy_real.txt  eps_MoOCl2_zz_imag.txt  eps_MoOCl2_zz_real.txt
scripts/: generate_dataset.py  predict.py  train.py
src/twistoptics/: __init__.py  config.py  data_generation.py  inference.py  materials.py  models.py  physics.py  training.py  utils.py
tests/: test_config.py  test_package_layout.py
